# monorepo

./: .clinerules-ask  .clinerules-code  .env.production  .env.version  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  index.html  nginx.gzip.conf  nginx.http.conf  nginx.ssl.conf  package-lock.json  vite.config.js
test_bed/smolagent/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  test_slack_token.py
test_bed/smolagent/smolagent/: cli.py  gradio_app.py
test_bed/smolagent/smolagent/tools/: __init__.py  gitlab.py  jira.py  slack.py  weather.py  web.py
tools/darkquery/: .env.example  .gitignore  README.md  package.json  pyproject.toml
tools/darkquery/darkquery/: cli.py  commands.py  context.py  display.py  ollama.py  processor.py  shell.py
tools/darkquery/darkquery/commands/: __init__.py  base.py  browser.py  execute.py  files.py  gitlab.py  jira.py
tools/darkquery/darkquery/datasources/: base.py  files.py  jira.py
tools/darkquery/darkquery/datasources/gitlab/: __init__.py  base.py  files.py  issues.py  merge_requests.py  projects.py
tools/darkquery/darkquery/generators/: gitlab.py  jql.py
tools/darkquery/docs/: model_commands.md
tools/darkquery/prompts/: prompt.txt  query_response.txt
tools/goose/mcp/mcp-slack-user/: README.md  pyproject.toml  requirements.txt  setup.py  test_mcp.py  test_mcp_client.py  test_pagination.sh
tools/postman_to_pytest/: .env.example  .env.sample  .gitignore  README.md  conftest.py  development_plan.md  find_largest_files.sh  project_requirements.txt  pyproject.toml  pytest.ini  pytest_fixtures.md  requirements.txt  test_cases.md
tools/postman_to_pytest/docs/: phase1_mvp.md  phase3_advanced.md  phase4_production.md  variable_registry.json.example
tools/postman_to_pytest/docs/phase1/: 01_core_framework.md  03_cli_tool.md  04_test_generation.md  06_testing_and_criteria.md
tools/postman_to_pytest/docs/phase1/core_conversion/: 01_overview.md  04_dependencies.md
tools/postman_to_pytest/example/generated_tests/: README.md  __init__.py  conftest.py
tools/postman_to_pytest/example/generated_tests/all_mangopay_endpoints/: __init__.py
tools/postman_to_pytest/postman2pytest/: __init__.py  __main__.py  body_utils.py  converter.py  dependency_utils.py  dynamic_vars.py  file_utils.py  fixtures.py  generator.py  name_utils.py  parser.py  resolver.py  test_generator.py  test_script_utils.py  url_utils.py
tools/postman_to_pytest/scripts/: setup_dev.sh  update_class_name.sh
tools/postman_to_pytest/src/: cli.py
tools/postman_to_pytest/src/generator/: __init__.py  content_generator.py  fixtures.py  request_formatter.py  test_content.py  test_file.py
tools/postman_to_pytest/src/generator/formatters/: __init__.py  assertion_formatter.py  (+2 more)
tools/postman_to_pytest/src/parser/: __init__.py  collection.py  dependency.py
tools/postman_to_pytest/src/postman2pytest/: __init__.py  __main__.py  auth.py  cli.py  generator.py  parser.py  request_handler.py  test_writer.py  url_utils.py  variable_handler.py
tools/postman_to_pytest/src/utils/: auth.py  validation.py
tools/postman_to_pytest/tests/: conftest.py  test_cli.py  test_converter.py
tools/postman_to_pytest/tests/generator/: test_content_generator.py  test_directory_structure.py  test_env_current_dir.py  test_env_no_files.py  test_env_project_root.py  test_env_sample.py  test_fixtures.py  test_oauth.py  test_output_generation.py  test_request_formatter.py  test_test_content.py  test_test_file.py  test_variable_initialization.py
tools/postman_to_pytest/tests/parser/: test_collection.py  test_dependency.py
tools/postman_to_pytest/tests/utils/: test_auth.py
(+1104 files in other folders)
