[project]
name = "darkquery"
version = "1.0.0"
description = "Interactive CLI tool for querying tickets and analyzing code"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "nltk>=3.8.0",
    "jira>=3.5.0",
    "pygments>=2.16.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[project.scripts]
darkquery = "darkquery.cli:main"
dq = "darkquery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3