[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postman2pytest"
version = "0.1.0"
description = "Convert Postman collections to pytest test files"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "requests[socks]>=2.28.0",
    "requests-oauthlib>=1.3.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.0.0",
    "Faker>=19.0.0",
]

[project.scripts]
postman2pytest = "postman2pytest.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
